--- a/Programmi C++/classi2_html.html
+++ b/Programmi C++/classi2_html.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html lang="it">
   <head>
     <meta charset="utf-8">
     <title>TITOLO DELLA PAGINA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       .center{
         text-align:center;
